[gd_scene load_steps=5 format=3 uid="uid://c4lo374xa7xis"]

[ext_resource type="Texture2D" uid="uid://pi81dgr28wp3" path="res://art/temp_assets/temp_del.png" id="1_u7etj"]
[ext_resource type="Script" path="res://save_file.gd" id="1_vxhf4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s7acs"]
bg_color = Color(0.72549, 0, 0, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ks1i"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="save_file" type="Button"]
offset_left = 50.0
offset_top = 50.0
offset_right = 1102.0
offset_bottom = 200.0
script = ExtResource("1_vxhf4")

[node name="file" type="RichTextLabel" parent="."]
layout_mode = 0
offset_right = 285.0
offset_bottom = 150.0
mouse_filter = 1
bbcode_enabled = true
text = "[font_size=50.0] FILE 1"

[node name="name" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 80.0
offset_top = 72.0
offset_right = 580.0
offset_bottom = 150.0
mouse_filter = 1
bbcode_enabled = true
text = "[font_size=45.0]Hubert"

[node name="playtime" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 902.0
offset_right = 1052.0
offset_bottom = 56.0
mouse_filter = 1
bbcode_enabled = true
text = "[right][font_size=40]00:00 "

[node name="delete_bg" type="Panel" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 95.0
offset_right = 1047.0
offset_bottom = 145.0
theme_override_styles/panel = SubResource("StyleBoxFlat_s7acs")

[node name="delete_file" type="Button" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 95.0
offset_right = 1047.0
offset_bottom = 145.0
focus_mode = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_0ks1i")

[node name="icon" type="TextureRect" parent="delete_file"]
layout_mode = 0
offset_right = 512.0
offset_bottom = 512.0
scale = Vector2(0.098, 0.098)
texture = ExtResource("1_u7etj")

[node name="confirmation" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="are_you_sure" type="RichTextLabel" parent="confirmation"]
layout_mode = 0
offset_right = 1052.0
offset_bottom = 100.0
bbcode_enabled = true
text = "[font_size=60.0][center]ARE YOU SURE?"

[node name="yes" type="Button" parent="confirmation"]
layout_mode = 0
offset_left = 276.0
offset_top = 85.0
offset_right = 476.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 30
text = "YES!"

[node name="no" type="Button" parent="confirmation"]
layout_mode = 0
offset_left = 576.0
offset_top = 85.0
offset_right = 776.0
offset_bottom = 135.0
theme_override_font_sizes/font_size = 30
text = "no..."

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="pressed" from="delete_file" to="." method="_on_delete_file_pressed"]
[connection signal="pressed" from="confirmation/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="confirmation/no" to="." method="_on_no_pressed"]
